Everything looks right

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,7 +14,7 @@
   --card-foreground: hsl(20, 14.3%, 4.1%);
   --popover: hsl(0, 0%, 100%);
   --popover-foreground: hsl(20, 14.3%, 4.1%);
-  --primary: hsl(173, 58%, 39%);
+  --primary: hsl(178,67%,55%);
   --primary-foreground: hsl(0, 0%, 98%);
   --secondary: hsl(32, 25%, 94%);
   --secondary-foreground: hsl(24, 9.8%, 10%);
