--- a/client/src/index.css
+++ b/client/src/index.css
@@ -44,14 +44,16 @@
   --font-serif: Georgia, serif;
   --font-mono: Menlo, monospace;
   --radius: 16px;
-  --shadow-2xs: 0px 2px 0px 0px hsl(202.8169, 89.1213%, 53.1373%, 0.00);
-  --shadow-xs: 0px 2px 0px 0px hsl(202.8169, 89.1213%, 53.1373%, 0.00);
-  --shadow-sm: 0px 2px 0px 0px hsl(202.8169, 89.1213%, 53.1373%, 0.00), 0px 1px 2px -1px hsl(202.8169, 89.1213%, 53.1373%, 0.00);
-  --shadow: 0px 2px 0px 0px hsl(202.8169, 89.1213%, 53.1373%, 0.00), 0px 1px 2px -1px hsl(202.8169, 89.1213%, 53.1373%, 0.00);
-  --shadow-md: 0px 2px 0px 0px hsl(202.8169, 89.1213%, 53.1373%, 0.00), 0px 2px 4px -1px hsl(202.8169, 89.1213%, 53.1373%, 0.00);
-  --shadow-lg: 0px 2px 0px 0px hsl(202.8169, 89.1213%, 53.1373%, 0.00), 0px 4px 6px -1px hsl(202.8169, 89.1213%, 53.1373%, 0.00);
-  --shadow-xl: 0px 2px 0px 0px hsl(202.8169, 89.1213%, 53.1373%, 0.00), 0px 8px 10px -1px hsl(202.8169, 89.1213%, 53.1373%, 0.00);
-  --shadow-2xl: 0px 2px 0px 0px hsl(202.8169, 89.1213%, 53.1373%, 0.00);
+
+
+  --shadow-2xs: 0 1px 2px 0 hsla(20, 14.3%, 4.1%, 0.05);
+  --shadow-xs: 0 1px 3px 0 hsla(20, 14.3%, 4.1%, 0.1), 0 1px 2px 0 hsla(20, 14.3%, 4.1%, 0.06);
+  --shadow-sm: 0 2px 5px -1px hsla(20, 14.3%, 4.1%, 0.1), 0 1px 3px -1px hsla(20, 14.3%, 4.1%, 0.06);
+  --shadow: 0 4px 6px -1px hsla(20, 14.3%, 4.1%, 0.1), 0 2px 4px -1px hsla(20, 14.3%, 4.1%, 0.06);
+  --shadow-md: 0 6px 10px -2px hsla(20, 14.3%, 4.1%, 0.1), 0 4px 6px -2px hsla(20, 14.3%, 4.1%, 0.05);
+  --shadow-lg: 0 10px 15px -3px hsla(20, 14.3%, 4.1%, 0.1), 0 4px 6px -2px hsla(20, 14.3%, 4.1%, 0.05);
+  --shadow-xl: 0 20px 25px -5px hsla(20, 14.3%, 4.1%, 0.1), 0 10px 10px -5px hsla(20, 14.3%, 4.1%, 0.04);
+  --shadow-2xl: 0 25px 50px -12px hsla(20, 14.3%, 4.1%, 0.25);
   --tracking-normal: 0em;
   --spacing: 0.25rem;
 }
@@ -93,14 +95,14 @@
   --font-serif: Georgia, serif;
   --font-mono: Menlo, monospace;
   --radius: 12px;
-  --shadow-2xs: 0px 2px 0px 0px hsl(202.8169, 89.1213%, 53.1373%, 0.00);
-  --shadow-xs: 0px 2px 0px 0px hsl(202.8169, 89.1213%, 53.1373%, 0.00);
-  --shadow-sm: 0px 2px 0px 0px hsl(202.8169, 89.1213%, 53.1373%, 0.00), 0px 1px 2px -1px hsl(202.8169, 89.1213%, 53.1373%, 0.00);
-  --shadow: 0px 2px 0px 0px hsl(202.8169, 89.1213%, 53.1373%, 0.00), 0px 1px 2px -1px hsl(202.8169, 89.1213%, 53.1373%, 0.00);
-  --shadow-md: 0px 2px 0px 0px hsl(202.8169, 89.1213%, 53.1373%, 0.00), 0px 2px 4px -1px hsl(202.8169, 89.1213%, 53.1373%, 0.00);
-  --shadow-lg: 0px 2px 0px 0px hsl(202.8169, 89.1213%, 53.1373%, 0.00), 0px 4px 6px -1px hsl(202.8169, 89.1213%, 53.1373%, 0.00);
-  --shadow-xl: 0px 2px 0px 0px hsl(202.8169, 89.1213%, 53.1373%, 0.00), 0px 8px 10px -1px hsl(202.8169, 89.1213%, 53.1373%, 0.00);
-  --shadow-2xl: 0px 2px 0px 0px hsl(202.8169, 89.1213%, 53.1373%, 0.00);
+  --shadow-2xs: 0 1px 2px 0 hsla(20, 14.3%, 4.1%, 0.05);
+  --shadow-xs: 0 1px 3px 0 hsla(20, 14.3%, 4.1%, 0.1), 0 1px 2px 0 hsla(20, 14.3%, 4.1%, 0.06);
+  --shadow-sm: 0 2px 5px -1px hsla(20, 14.3%, 4.1%, 0.1), 0 1px 3px -1px hsla(20, 14.3%, 4.1%, 0.06);
+  --shadow: 0 4px 6px -1px hsla(20, 14.3%, 4.1%, 0.1), 0 2px 4px -1px hsla(20, 14.3%, 4.1%, 0.06);
+  --shadow-md: 0 6px 10px -2px hsla(20, 14.3%, 4.1%, 0.1), 0 4px 6px -2px hsla(20, 14.3%, 4.1%, 0.05);
+  --shadow-lg: 0 10px 15px -3px hsla(20, 14.3%, 4.1%, 0.1), 0 4px 6px -2px hsla(20, 14.3%, 4.1%, 0.05);
+  --shadow-xl: 0 20px 25px -5px hsla(20, 14.3%, 4.1%, 0.1), 0 10px 10px -5px hsla(20, 14.3%, 4.1%, 0.04);
+  --shadow-2xl: 0 25px 50px -12px hsla(20, 14.3%, 4.1%, 0.25);
 }
 
 @layer base {
