--- a/client/src/index.css
+++ b/client/src/index.css
@@ -56,6 +56,16 @@
 
 /* --- ADD THIS CODE --- */
 @layer utilities {
+  .noselect {
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+    -khtml-user-select: none; /* Konqueror HTML */
+    -moz-user-select: none; /* Old versions of Firefox */
+    -ms-user-select: none; /* Internet Explorer/Edge */
+    user-select: none; /* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */
+    pointer-events: none;
+  }
+
   .custom-scrollbar::-webkit-scrollbar {
     height: 12px;
   }
